--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-      integrity="sha512-9BwLAVqqt6oFdXohPLuNHxhx36BVj5uGSGmizkmGkgl3uMSgNalKc/smum+GJU/TTP0jy0+ruwC3xNAk3F759A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <title>Sam's Todo-List</title>
-    <link rel="stylesheet" href="./todo.css" />
-  </head>
-  <body>
-    <diV class="main">
-      <div class="undraw">
-        <img src="./sam-todo-img.svg" alt=""> 
-      </div>
-      <section>
-    <header>
-      <h1>Sam's <span> Todo-List</span></h1>
-    </header>
 
-    <form>
-      <input type="text" class="todo-input" />
-      <button class="todo-button" type="submit">
-        <i class="fas fa-plus-square btn-icon"> </i>
-      </button>
-      <div class="select">
-        <select name="todos" class="filter-todo">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    integrity="sha512-9BwLAVqqt6oFdXohPLuNHxhx36BVj5uGSGmizkmGkgl3uMSgNalKc/smum+GJU/TTP0jy0+ruwC3xNAk3F759A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Sam's Todo-List</title>
+  <link rel="stylesheet" href="./todo.css" />
+</head>
+
+<body>
+  <header>
+    <h1>Sam's <span> Todo-List</span></h1>
+  </header>
+  <diV class="main">
+    <div class="undraw">
+      <img src="./sam-todo-img.svg" alt="">
+    </div>
+    <section>
+      
+
+      <form>
+        <input type="text" class="todo-input" />
+        <button class="todo-button" type="submit">
+          <i class="fas fa-plus-square btn-icon"> </i>
+        </button>
+        <div class="select">
+          <select name="todos" class="filter-todo">
             <option value="all">All</option>
             <option value="completed">Completed</option>
             <option value="uncompleted">Uncompleted</option>
-        </select>
-      </div>
-    </form>
+          </select>
+        </div>
+      </form>
 
-    <div class="todo-container">
-      <ul class="todo-list"></ul>
-    </div>
+      <div class="todo-container">
+        <ul class="todo-list"></ul>
+      </div>
   </div>
-</section>
-    <script src="./app.js"></script>
-  </body>
+  </section>
+  <script src="./app.js"></script>
+</body>
+
 </html>
